<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cc_background">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_nav_host"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="false"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/main_nav_graph" />

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:background="@color/cc_surface"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/home_tab_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_bottom_navigation_icon"
                android:duplicateParentState="true">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/home_tab"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_home"
                    android:tint="@color/bottom_navigation_item_tint" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:includeFontPadding="false"
                android:text="@string/home_tab"
                android:textColor="@color/bottom_navigation_item_tint"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorites_tab_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_bottom_navigation_icon"
                android:duplicateParentState="true">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/favorites_tab"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_bookmark"
                    android:tint="@color/bottom_navigation_item_tint" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:includeFontPadding="false"
                android:text="@string/favorites_tab"
                android:textColor="@color/bottom_navigation_item_tint"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_tab_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_bottom_navigation_icon"
                android:duplicateParentState="true">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/account_tab"
                    android:duplicateParentState="true"
                    android:src="@drawable/ic_person"
                    android:tint="@color/bottom_navigation_item_tint" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:duplicateParentState="true"
                android:includeFontPadding="false"
                android:text="@string/account_tab"
                android:textColor="@color/bottom_navigation_item_tint"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
